Change History
==============

1.7.26 (unreleased)
-------------------

- Only test on Plone 4.3 and Python 2.7.
  It might still work on Plone 4.1 and 4.2 and Python 2.6, but the effort to keep the tests running is not worth it.
  [maurits]


1.7.25 (2018-12-17)
-------------------

- Backport SaveData Excel Export from master branch.
  [petschki]


1.7.24 (2018-03-06)
-------------------

- Fix UnicodeDecodeError: RateScaleField with non-ascii values and without
  Thank-you-page.  [sneridagh]


1.7.23 (2017-07-08)
-------------------

- Remove collective.cover adapter reference. (closes `#194`_).
  [rodfersou]


1.7.22 (2017-02-09)
-------------------

- Fixed UnicodeDecodeError when vocabulary value is a non-ascii string.
  This could happen in selection and multi selection fields.
  [maurits]

- change captcha verification message for #186
  [tkimnguyen]

- add jQuery 1.9+ support with `.delegate()`. This also ensures
  jQuery 1.4.2+ and Plone 4.1+ compatibility. Fixes #188
  [petschki]


1.7.21 (2016-12-06)
-------------------

- Transform value to unicode before translating. Fix #182
  [pbauer]


1.7.20 (2016-11-22)
-------------------

- Fixed showing translations of help text.  Since security release
  1.7.18, help text was showing up with only the message id, for
  example ``help_placeholder``.
  Fixes `issue #178 <https://github.com/smcmahon/Products.PloneFormGen/issues/178>`_.
  [maurits]

- Use formActionOverride action in embedded view [fRiSi]

- Updated Spanish translations
  [macagua]

- locales rebuild adding more new strings for Gettext files
  [macagua]

- Enabled the Plone Theme Classic for loadtest profile
  [macagua]


1.7.19 (2016-05-01)
-------------------

- Updated history: 1.7.18 was accidentally released as version 1.7.19.
  Both versions are valid and contain the fix.  We recommend using
  1.7.19.  [maurits]


1.7.18 (2016-05-01)
-------------------

- CGI escape field help (description); prevent method call.