@@ -1,0 +1,27 @@
+<?xml version="1.0"?>
+<object name="portal_types" meta_type="Plone Types Tool">
+ <object name="FieldsetFolder" remove="true" />
+ <object name="FormBooleanField" remove="true" />
+ <object name="FormCaptchaField" remove="true" />
+ <object name="FormCustomScriptAdapter" remove="true" />
+ <object name="FormDateField" remove="true" />
+ <object name="FormFileField" remove="true" />
+ <object name="FormFixedPointField" remove="true" />
+ <object name="FormFolder" remove="true" />
+ <object name="FormIntegerField" remove="true" />
+ <object name="FormLabelField" remove="true" />
+ <object name="FormLikertField" remove="true" />
+ <object name="FormLinesField" remove="true" />
+ <object name="FormMailerAdapter" remove="true" />
+ <object name="FormMultiSelectionField" remove="true" />
+ <object name="FormPasswordField" remove="true" />
+ <object name="FormRichLabelField" remove="true" />
+ <object name="FormRichTextField" remove="true" />
+ <object name="FormSaveDataAdapter" remove="true" />
+ <object name="FormSelectionField" remove="true" />
+ <object name="FormStringField" remove="true" />
+ <object name="FormTextField" remove="true" />
+ <object name="FormThanksPage" remove="true" />
+ <object name="FieldsetStart" remove="true" />
+ <object name="FieldsetEnd" remove="true" />
+</object>
